[gd_scene load_steps=33 format=2]

[ext_resource path="res://DragNDrop/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://DragNDrop/Ubuntu-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://DragNDrop/Images/background.jpg" type="Texture" id=3]
[ext_resource path="res://DragNDrop/Instructions/Instruction9.png" type="Texture" id=4]
[ext_resource path="res://DragNDrop/Instructions/Instruction5.png" type="Texture" id=5]
[ext_resource path="res://DragNDrop/Instructions/Instruction1.png" type="Texture" id=6]
[ext_resource path="res://DragNDrop/Instructions/Instruction6.png" type="Texture" id=7]
[ext_resource path="res://DragNDrop/Instructions/Instruction4.png" type="Texture" id=8]
[ext_resource path="res://DragNDrop/Instructions/Instruction8.png" type="Texture" id=9]
[ext_resource path="res://DragNDrop/Instructions/Instruction11.png" type="Texture" id=10]
[ext_resource path="res://DragNDrop/Instructions/Instruction2.png" type="Texture" id=11]
[ext_resource path="res://DragNDrop/Instructions/Instruction7.png" type="Texture" id=12]
[ext_resource path="res://DragNDrop/Icon 1.gd" type="Script" id=13]
[ext_resource path="res://DragNDrop/Images/Mappa.png" type="Texture" id=14]
[ext_resource path="res://DragNDrop/RetryButton.gd" type="Script" id=15]
[ext_resource path="res://DragNDrop/OKButton.gd" type="Script" id=16]
[ext_resource path="res://DragNDrop/Instructions/Instruction3.png" type="Texture" id=17]
[ext_resource path="res://DragNDrop/Instructions/Instruction10.png" type="Texture" id=18]
[ext_resource path="res://DragNDrop/Images/ButtonOk.png" type="Texture" id=19]
[ext_resource path="res://DragNDrop/Images/ButtonRetry.png" type="Texture" id=20]
[ext_resource path="res://DragNDrop/HelpButton.gd" type="Script" id=21]
[ext_resource path="res://DragNDrop/RetryHelpButton.gd" type="Script" id=22]
[ext_resource path="res://DragNDrop/Images/ButtonHelp.png" type="Texture" id=23]
[ext_resource path="res://DragNDrop/Images/ButtonBack.png" type="Texture" id=24]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 2850, 1895 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Panel" parent="."]
margin_top = 1.18921
margin_right = 1022.0
margin_bottom = 601.189
rect_clip_content = true
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions1" type="RichTextLabel" parent="Background"]
margin_left = 9.56125
margin_top = 7.77548
margin_right = 386.561
margin_bottom = 171.775
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.941176, 1, 0, 1 )
text = "Programma le formiche a raggiungere il cibo e riportarlo al formicaio seguendo la strada più breve!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions2" type="RichTextLabel" parent="Background"]
margin_left = 14.99
margin_top = 144.0
margin_right = 312.99
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.941176, 1, 0, 1 )
text = "Riordina le istruzioni dell'algoritmo e poi premi OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mappa" type="Sprite" parent="Background"]
position = Vector2( 37.027, 211.287 )
scale = Vector2( 0.471657, 0.422369 )
texture = ExtResource( 14 )
centered = false

[node name="OkButton" type="TextureButton" parent="Background"]
anchor_left = 0.408
anchor_top = 0.918
anchor_right = 0.408
anchor_bottom = 0.918
margin_left = 357.514
margin_top = -15.7998
margin_right = 655.514
margin_bottom = 77.2002
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 19 )
expand = true
script = ExtResource( 16 )

[node name="HelpButton" type="TextureButton" parent="Background"]
anchor_bottom = 0.033
margin_left = 540.0
margin_top = 535.0
margin_right = 838.0
margin_bottom = 608.2
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 23 )
expand = true
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 1" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 8.0
margin_right = 1038.0
margin_bottom = 58.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 6 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 2" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 55.0
margin_right = 1038.0
margin_bottom = 105.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 11 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 3" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 102.0
margin_right = 1038.0
margin_bottom = 152.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 17 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 4" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 149.0
margin_right = 1038.0
margin_bottom = 199.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 8 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Icon 5" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 196.0
margin_right = 1038.0
margin_bottom = 246.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 5 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 6" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 243.0
margin_right = 1038.0
margin_bottom = 293.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 7 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 7" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 290.0
margin_right = 1038.0
margin_bottom = 340.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 12 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 8" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 337.0
margin_right = 1038.0
margin_bottom = 387.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 9" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 384.0
margin_right = 1038.0
margin_bottom = 434.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 10" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 431.0
margin_right = 1038.0
margin_bottom = 481.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 18 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon 11" type="TextureRect" parent="Control"]
margin_left = 388.0
margin_top = 478.0
margin_right = 1038.0
margin_bottom = 528.0
rect_scale = Vector2( 0.95, 0.9 )
mouse_filter = 0
texture = ExtResource( 10 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLose" type="Panel" parent="."]
visible = false
margin_left = 225.0
margin_top = 150.0
margin_right = 875.0
margin_bottom = 470.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelLose"]
margin_left = 30.1472
margin_top = 64.1892
margin_right = 568.148
margin_bottom = 104.189
custom_fonts/normal_font = SubResource( 5 )
text = "                        L'algoritmo è sbagliato :("
__meta__ = {
"_editor_description_": ""
}

[node name="RetryButton" type="TextureButton" parent="PanelLose"]
anchor_right = 0.11
anchor_bottom = 0.232
margin_left = 240.102
margin_top = 151.171
margin_right = 466.602
margin_bottom = 169.931
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 20 )
script = ExtResource( 15 )

[node name="PanelWin" type="Panel" parent="."]
visible = false
margin_left = 225.0
margin_top = 150.0
margin_right = 875.0
margin_bottom = 470.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelWin"]
margin_left = 74.5942
margin_top = 62.7568
margin_right = 612.594
margin_bottom = 245.757
custom_fonts/normal_font = SubResource( 5 )
text = "                          Complimenti!
         
Hai programmato le formiche correttamente!

                               7    4    6"

[node name="PanelHelp" type="Panel" parent="."]
visible = false
margin_left = 225.0
margin_top = 150.0
margin_right = 875.0
margin_bottom = 470.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelHelp"]
margin_left = 55.7297
margin_top = 57.9542
margin_right = 631.73
margin_bottom = 210.954
custom_fonts/normal_font = SubResource( 8 )
text = "          Ricorda che le formiche rilasciano
 feromoni per comunicare con le altre formiche,
quindi segui la strada in cui ci sono più feromoni."

[node name="RetryHelpButton" type="TextureButton" parent="PanelHelp"]
margin_left = 244.923
margin_top = 187.832
margin_right = 542.923
margin_bottom = 280.832
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 24 )
script = ExtResource( 22 )
[connection signal="pressed" from="Background/OkButton" to="Background/OkButton" method="_on_Button_pressed"]
[connection signal="pressed" from="Background/HelpButton" to="Background/HelpButton" method="_on_HelpButton_pressed"]
[connection signal="pressed" from="PanelLose/RetryButton" to="PanelLose/RetryButton" method="_on_Button_pressed"]
[connection signal="pressed" from="PanelHelp/RetryHelpButton" to="PanelHelp/RetryHelpButton" method="_on_RetryHelpButton_pressed"]
